--- a/package.json
+++ b/package.json
@@ -32,11 +32,18 @@
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "web-animations-js": "^2.3.1",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.12",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "config": {
+    "ionic_bundler": "webpack",
+    "ionic_source_map": "source-map",
+    "ionic_copy": "./config/copy.config.js",
+    "ionic_sass": "./config/sass.config.js"
+  }
 }
