--- a/platforms/ios/MobiHymn Beta/MobiHymn Beta-Info.plist
+++ b/platforms/ios/MobiHymn Beta/MobiHymn Beta-Info.plist
@@ -65,5 +65,7 @@
       <string>UIInterfaceOrientationPortraitUpsideDown</string>
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
+    <key>NSMicrophoneUsageDescription</key>
+    <string></string>
   </dict>
 </plist>
