android ios build

--- a/platforms/ios/MobiHymn Beta/MobiHymn Beta-Info.plist
+++ b/platforms/ios/MobiHymn Beta/MobiHymn Beta-Info.plist
@@ -66,6 +66,6 @@
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
     <key>NSMicrophoneUsageDescription</key>
-    <string></string>
+    <string/>
   </dict>
 </plist>
