--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "web-animations-js": "^2.3.1",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.12",
+        "cordova-plugin-media": "~3.0.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
@@ -81,7 +82,10 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-file": {},
-            "cordova-plugin-insomnia": {}
+            "cordova-plugin-insomnia": {},
+            "cordova-plugin-media": {
+                "MICROPHONE_USAGE_DESCRIPTION": " "
+            }
         }
     }
 }
