json data src is firebase storage

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,8 +7,8 @@
   },
   "proxies": [
     {
-      "path": "/local",
-      "proxyUrl": "file://"
+      "path": "/storageapi",
+      "proxyUrl": "https://firebasestorage.googleapis.com"
     }
   ]
 }
