--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^4.1.0",
         "@ionic-native/insomnia": "^4.1.0",
+        "@ionic-native/network": "^4.5.2",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
@@ -41,6 +42,7 @@
         "cordova-plugin-whitelist": "1.3.1",
         "css-animator": "^2.1.1",
         "file": "^0.2.2",
+        "firebase": "4.8.0",
         "font-awesome": "4.7.0",
         "ionic-angular": "3.6.0",
         "ionic-audio": "^3.2.0",
