--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/core": "4.5.2",
-        "@ionic-native/file": "4.5.2",
-        "@ionic-native/file-transfer": "4.5.2",
+        "@ionic-native/core": "^4.5.2",
+        "@ionic-native/file": "^4.5.2",
+        "@ionic-native/file-transfer": "^4.5.2",
         "@ionic-native/insomnia": "4.1.0",
         "@ionic-native/network": "4.5.2",
         "@ionic-native/splash-screen": "^4.5.2",
@@ -39,6 +39,7 @@
         "cordova-plugin-file-transfer": "4.3.3",
         "cordova-plugin-insomnia": "^4.3.0",
         "cordova-plugin-media": "~3.0.1",
+        "cordova-plugin-network-information": "~2.0.1",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.2",
         "cordova-plugin-whitelist": "1.3.1",
@@ -56,8 +57,7 @@
         "soundfont-player": "^0.10.6",
         "sw-toolbox": "3.6.0",
         "web-animations-js": "^2.3.1",
-        "zone.js": "0.8.12",
-        "cordova-plugin-network-information": "~2.0.1"
+        "zone.js": "0.8.12"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
