--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/file": "^4.5.2",
         "@ionic-native/file-transfer": "^4.5.2",
         "@ionic-native/insomnia": "4.1.0",
+        "@ionic-native/music-controls": "^4.5.2",
         "@ionic-native/network": "4.5.2",
         "@ionic-native/splash-screen": "^4.5.2",
         "@ionic-native/status-bar": "^4.5.2",
@@ -39,6 +40,7 @@
         "cordova-plugin-file-transfer": "4.3.3",
         "cordova-plugin-insomnia": "^4.3.0",
         "cordova-plugin-media": "~3.0.1",
+        "cordova-plugin-music-controls": "^2.1.4",
         "cordova-plugin-network-information": "~2.0.1",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.2",
@@ -95,7 +97,8 @@
                 "MICROPHONE_USAGE_DESCRIPTION": " "
             },
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-music-controls": {}
         }
     }
 }
