--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
-        "ionic": "3.19.0",
+        "electron": "^1.7.11",
+        "electron-builder": "^19.55.2",
+        "foreman": "^2.0.0",
+        "ionic": "3.19.1",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
