--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
         "jquery": "^3.2.1",
-        "midi-player-js": "^2.0.1",
+        "midi-player-js": "2.0.1",
         "rxjs": "5.4.0",
         "soundfont-player": "^0.10.6",
         "sw-toolbox": "3.6.0",
@@ -69,7 +69,7 @@
         "ionic": "3.19.1",
         "typescript": "2.3.4"
     },
-    "description": "An Ionic project",
+    "description": "MobiHymn",
     "config": {
         "ionic_bundler": "webpack",
         "ionic_source_map": "source-map",
