input modal focus

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "mobihymn_ionic2",
-  "app_id": "",
+  "app_id": "91b67970",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
