--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-device": "1.1.4",
         "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-file-transfer": "4.3.3",
+        "cordova-plugin-file-transfer": "^4.3.3",
         "cordova-plugin-insomnia": "^4.3.0",
         "cordova-plugin-media": "~3.0.1",
         "cordova-plugin-music-controls": "^2.1.4",
